# Cancer-Diagnosis-System

./: .gitignore  README.md
CancerDiagnosisSystem/: CMakeLists.txt  DATA_LOADING_TROUBLESHOOTING.md  SETUP_GUIDE.md  main.cpp  setup_server.bat  setup_server.sh
CancerDiagnosisSystem/data/: genes.csv  patients.csv  test_genes.csv  test_patients.csv
CancerDiagnosisSystem/headers/: CancerDiagnosisSystem.h  DataPreprocessor.h  DecisionTreeClassifier.h  EvaluationMetrics.h  GeneticData.h  HashMapper.h  KNNClassifier.h  LogisticRegressionModel.h  NaiveBayesClassifier.h  Patient.h
CancerDiagnosisSystem/src/: CancerDiagnosisSystem.cpp  DataPreprocessor.cpp  DecisionTreeClassifier.cpp  EvaluationMetrics.cpp  GeneticData.cpp  HashMapper.cpp  KNNClassifier.cpp  LogisticRegressionModel.cpp  NaiveBayesClassifier.cpp  Patient.cpp  Server.cpp
CancerDiagnosisSystem/ui/: index.html  script.js  styles.css
